<resources>
    <string name="app_name">ContactsRoom</string>
    <string name="new_contact">Add New Contact</string>
    <string name="heading">Contact Details</string>
    <string name="sub">---Edit Contact here---</string>
    <string name="tv1">Name</string>
    <string name="tv2">Number</string>
    <string name="bt1">Save Contact</string>
    <string name="edit">Edit Contact</string>
    <string name="del">Delete Contact</string>
    <string name="sc">Save Changes</string>
    <string name="acd">Add Contact Information</string>
    <string name="save">Save Changes</string>
</resources>