<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading"
            android:text="@string/heading"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

        <TextView
            android:layout_width="250dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/con_name"
            android:text="@string/tv1"
            android:layout_below="@id/heading"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="250dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/con_num"
            android:text="@string/tv2"
            android:layout_below="@id/con_name"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/dl"
            android:text="@string/del"
            android:layout_below="@+id/con_num"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/ed"
            android:text="@string/edit"
            android:layout_below="@+id/con_num"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>
