<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv0"
        android:text="@string/acd"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:text="@string/tv1"
        android:layout_below="@id/tv0"
        android:textSize="35sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/et0"
        android:layout_toEndOf="@+id/tv1"
        android:layout_below="@id/tv0"
        android:textSize="20sp"/>


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv2"
        android:text="@string/tv2"
        android:layout_below="@id/tv1"
        android:textSize="35sp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:layout_toEndOf="@+id/tv2"
        android:layout_below="@id/tv1"
        android:textSize="20sp"/>

    <Button
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt1"
        android:text="@string/bt1"
        android:layout_below="@id/et1"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

</RelativeLayout>